<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requirements.HotspotReqFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerPadding="5dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">


        <Button
            android:id="@+id/hotspotPermission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_hotspot_permission" />

        <Button
            android:id="@+id/enableHotspot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_hotspot_and_tethering" />

        <EditText
            android:id="@+id/ipTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hotspot_ip_address"
            android:inputType="text" />

        <EditText
            android:id="@+id/portTxtEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_port"
            android:inputType="number" />

        <LinearLayout
            android:id="@+id/wiNetActionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/startServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_server" />

            <Button
                android:id="@+id/saveDefaultSocket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_socket_as_default" />
        </LinearLayout>

        <TextView
            android:id="@+id/statView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>