<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dump.FrontPanelFragment_old">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/startRecordAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelStartRecordAll" />

        <Button
            android:id="@+id/startRecordSensors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_record_sensors" />

        <Button
            android:id="@+id/startCarManualCtrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelStartCarManual" />

        <Button
            android:id="@+id/startTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelStartTest" />

        <TextView
            android:id="@+id/fpReportText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"/>

    </LinearLayout>

</FrameLayout>