<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WirelessConnFrontPanelFragment">

    <LinearLayout
        android:id="@+id/wiNetActionsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wireless_network" />

        <Button
            android:id="@+id/btnHotspot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobile_hotspot" />

        <Button
            android:id="@+id/btnBluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth" />
    </LinearLayout>

</FrameLayout>