<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <com.dayani.m.roboplatform.utils.cutom_views.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/cmd_btn_container"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/texture"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="732dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/connWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_wi_fi" />

        <Button
            android:id="@+id/connBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_blth" />

        <Button
            android:id="@+id/connUsb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conn_usb" />

        <Button
            android:id="@+id/startCtrlServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        android:padding="8dp"
        android:text="@string/not_connected_no_preview"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmd_btn_container"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/texture" />

</androidx.constraintlayout.widget.ConstraintLayout>