<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".ControlPanelFragment">

    <Button
        android:id="@+id/btnCtrlQ"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_btn_q"
        app:layout_constraintBottom_toTopOf="@+id/btnCtrlA"
        app:layout_constraintEnd_toStartOf="@+id/btnCtrlW"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnCtrlE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_e"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCtrlW"
        app:layout_constraintTop_toTopOf="@+id/btnCtrlW" />

    <Button
        android:id="@+id/btnCtrlW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_w"
        app:layout_constraintEnd_toStartOf="@+id/btnCtrlE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCtrlQ"
        app:layout_constraintTop_toTopOf="@+id/btnCtrlQ" />

    <Button
        android:id="@+id/btnCtrlA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_a"
        app:layout_constraintEnd_toStartOf="@+id/btnCtrlS"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCtrlQ" />

    <Button
        android:id="@+id/btnCtrlS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_s"
        app:layout_constraintEnd_toStartOf="@+id/btnCtrlD"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCtrlA"
        app:layout_constraintTop_toTopOf="@+id/btnCtrlA" />

    <Button
        android:id="@+id/btnCtrlD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCtrlS"
        app:layout_constraintTop_toTopOf="@+id/btnCtrlS" />

    <TextView
        android:id="@+id/labelKeyCmd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_key_command"
        app:layout_constraintEnd_toStartOf="@+id/keyCmdInput"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCtrlA" />

    <EditText
        android:id="@+id/keyCmdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@id/labelKeyCmd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelKeyCmd"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/wordCmdInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/txt_word_command"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSendWC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelKeyCmd" />

    <Button
        android:id="@+id/btnSendWC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSendWC"
        app:layout_constraintBaseline_toBaselineOf="@id/wordCmdInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wordCmdInput"
        tools:layout_editor_absoluteY="700dp" />

    <TextView
        android:id="@+id/txtChatReport"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:gravity="start|top"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordCmdInput"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>