<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requirements.UsbReqFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:dividerPadding="5dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enumDevs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enumBtn" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/vendorID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/vendor_id"
                android:inputType="number" />

            <EditText
                android:id="@+id/deviceID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/device_id"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/openDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openDev" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/usbOpenActionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/saveDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_device_as_default" />

            <Button
                android:id="@+id/runTestBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/run_test" />

            <!-- LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/onBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/onBtn" />

            </LinearLayout -->

        </LinearLayout>

        <TextView
            android:id="@+id/foundPeers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:textAlignment="center" />

    </LinearLayout>

</FrameLayout>